--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Preact + TS</title>
+    <style>
+      ::selection {
+        /** TODO. **/
+        background-color: transparent;
+      }
+    </style>
   </head>
   <body>
     <div id="myEditor"></div>
